update api endpoint url

--- a/aws-net-if-query/token_refresh/config.sample.yaml
+++ b/aws-net-if-query/token_refresh/config.sample.yaml
@@ -1,7 +1,7 @@
 # Copy and rename to config-{env}.yaml
-api_endpoint: "https://example.com/generate_token"
-api_key: "xxxxXXXXxxxxXXXXxxxxXXXXxxxxXXXXxxxxXXXX"
-profile_name: my_user-dev
+api_endpoint: "https://example.com/v1/token?username=flast&user_key=YourUserKeyHere"
+api_key: "YourAPIKeyHere"
+profile_name: example
 aws_config:
   region_name: us-east-1
   retries:
